--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #f2f4f8;
   margin: 0;
-  /* margin-left: auto;
+  margin-left: auto;
   margin-right: auto;
-  max-width: 1200px; */
+  max-width: 1200px;
 }
 
 a {
@@ -153,7 +153,7 @@ button {
   left: 0;
   bottom: 0;
   right: 0;
-  height: 85px;
+  height: 64px;
   background-color: #ffffff;
   z-index: 1000;
   display: flex;
@@ -444,7 +444,7 @@ button {
 }
 
 .categoryListingLocation {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 0.55rem;
   opacity: 0.8;
   margin-bottom: 0;
@@ -452,7 +452,7 @@ button {
 
 .categoryListingName {
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 0.95rem;
   margin: 0;
 }
 
